Integrate Workers data for all States and at Country level
Add Workers data of all States and districts within. This data is classified
by Rural/Urban, workers category and Sex.

Signed-off-by: Arun Siluvery <arunk.siluvery@gmail.com>

--- a/janaganana/templates/profile/profile_detail.html
+++ b/janaganana/templates/profile/profile_detail.html
@@ -12,4 +12,5 @@
 {% include 'profile/sections/age.html' %}
 {% include 'profile/sections/education.html' %}
 {% include 'profile/sections/maritalstatus.html' %}
+{% include 'profile/sections/workers.html' %}
 {% endblock %}
